<resources>
    <string name="app_name">Parking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="_0">0</string>
    <string name="name_required">name Required</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Requires at least 6 characters</string>
    <string name="already_account">There is already a user with this email address</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="news_Feed">news_feed</string>
    <string name="my_post">My_Posts</string>
    <string name="Profile">Profile</string>
    <string name="Posts">Posts</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="share_empty_parking">Share Empty Parking</string>
    <string name="enter_location">Enter Location</string>
    <string name="more_info">More Info</string>
    <string name="parking_picture">Parking Picture</string>
    <string name="icon_camera">icon Camera</string>
    <string name="image_required">Image Required</string>
    <string name="location_required">location required</string>
    <string name="add_post">add_post</string>
</resources>