<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mapPage"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/map"
        app:itemIconSize="1dp"
        app:itemIconTint="@color/orange" />

    <item
        android:id="@+id/postsPage"
        android:enabled="true"
        android:icon="@drawable/group"
        android:title="@string/Posts"
        app:itemIconTint="@color/orange"
        />
    <item
        android:id="@+id/myPostsPage"
        android:enabled="true"
        android:icon="@drawable/group"
        android:title="@string/my_post"
        app:itemIconTint="@color/orange"
        />


    <item
        android:id="@+id/profilePage"
        android:enabled="true"
        android:icon="@drawable/more_icon"
        android:title="@string/Profile"
        app:itemIconSize="1dp"
        app:itemIconTint="@color/orange" />


</menu>